src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>SJMDSA__Assign_multi_category__c</fullName>
        <formula>HYPERLINK(&quot;/apex/&quot; + IF(ISBLANK($Setup.SJMDSA__DSA_App_Setting__c.SJMDSA__Package_Name__c), &quot;&quot;, $Setup.SJMDSA__DSA_App_Setting__c.SJMDSA__Package_Name__c + &quot;__&quot;) + &quot;AssignCategories?contentid=&quot;+ Id, &quot;Click Here&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign multi category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJMDSA__Available_Offline__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This content will be available offline.</description>
        <label>Available Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SJMDSA__Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shareable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJMDSA__Internal_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to define a document to be Internal only. The document will Only show up in Internal Mode for a Given Configuration.</description>
        <label>Internal Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SJMDSA__IsFeatured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zinc_ID__c</fullName>
        <label>Zinc ID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>